[package]
name         = "flasher-stub"
version      = "0.3.0"
edition      = "2021"
rust-version = "1.84"
license      = "MIT OR Apache-2.0"
categories   = ["embedded", "no-std"]

[dependencies]
critical-section = "1.2.0"
esp-hal          = { git = "https://github.com/esp-rs/esp-hal", rev = "f46f862", features = ["unstable"] }
heapless         = { version = "0.8.0", default-features = false }
static_cell      = "2.1.0"

[features]
esp32   = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]
dprint  = []

[profile.release]
opt-level     = "z"
codegen-units = 1
lto           = true
panic         = "abort"
debug         = true

[lints.rust]
unexpected_cfgs = "allow"
