[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow         = "1.0.95"
base64         = "0.22.1"
cargo_metadata = "0.19.1"
clap           = { version = "4.5.28", features = ["derive"] }
env_logger     = "0.11.6"
log            = "0.4.25"
serde          = { version = "1.0.217", features = ["derive"] }
serde_json     = "1.0.138"
strum          = { version = "0.26.3", features = ["derive"] }
toml           = "0.8.19"
xmas-elf       = "0.9.1"
